<resources>
    <string name="app_name">EventTech</string>
    <string name="app_logo">logo</string>
    <string name="next">Berikutnya</string>
    <string name="intro_skip">Lewati untuk saat ini</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_logo">logo</string>
    <string name="title_register">Selamat Datang</string>
    <string name="title_login">Masuk ke akun Anda</string>
    <string name="subtitle_register">Cari Event IT yang sesuai dengan minat dan passion kamu</string>
    <string name="subtitle_login">Masuk lagi untuk cari event dan tingkatkan kemampuan IT milikmu</string>
    <string name="hint_username">Nama Pengguna</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sudah_punya_akun">Sudah punya akun? </string>
    <string name="masuk"> Masuk</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="suggest_register_text">Belum punya akun?  </string>
    <string name="forgot_password">Lupa password?</string>
    <color name="mtrl_textinput_default_box_stroke_color">@color/whitegray</color>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_authentication">Module Title</string>
    <string name="title_favorite">Module Favorite</string>
    <string name="title_schedule">Event Schedule</string>
    <string name="title_profile">Profile</string>
    <string name="title_eventconference">Event Konferensi</string>
    <string name="title_eventcompetition">Kompetisi IT</string>
    <string name="title_search">Module Title</string>
    <string name="cdNotification">tombol notifikasi</string>
    <string name="title_event_conference">Kategori Event Pertemuan</string>
    <string name="title_event_popular">Event Terpopuler</string>
    <string name="cd_category_icon">category icon</string>
    <string name="see_all">Lihat Semua</string>
    <string name="cd_event_poster">event poster</string>
    <string name="button_menu">button menu</string>
    <string name="title_event_favorite">Event Favorite</string>
    <string name="cd_back">Back button</string>
    <string name="title_detail">Module Title</string>
    <string name="detail_event">Detail Event</string>
    <string name="text_agree">Setuju</string>
    <string name="text_cancel">Batalkan</string>
    <string name="title_dialog_reminder">Tambahkan pengingat</string>
    <string name="desc_reminder_dialog">Apakah anda akan menambahkan pengingat event pada event %s</string>
    <string name="desc_reminder_dialog_delete">Apakah anda akan menghapus pengingat event pada event %s</string>
    <string name="desc_logout">Apakah kamu yakin akan keluar dari aplikasi?</string>
    <string name="cd_search_not_found">Pencarian Tidak di temukan</string>
    <string name="text_registration_page">Halaman Pendaftaran</string>
    <string name="text_all">Semua</string>
    <string name="text_sort_by_date">Urutkan Berdasarkan Tanggal</string>
    <string name="text_sort_by_price">Urutkan Berdasarkan Biaya</string>
    <string name="text_sort_by_popularity">Urutkan Berdasarkan Popularitas</string>
</resources>