<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/darkgray">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title_dialog_reminder"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/range_16"
        android:layout_marginStart="@dimen/range_24"
        />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/range_8"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:textSize="@dimen/size_12"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_schedule"
        app:layout_constraintStart_toStartOf="@id/tv_dialog_title"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
        tools:text="@string/desc_reminder_dialog" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/range_24"
        android:layout_marginTop="@dimen/range_16"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        android:layout_marginBottom="@dimen/range_16"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/text_agree"
        style="@style/ButtonStyle14"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/btn_add_schedule"
        android:layout_marginEnd="@dimen/range_24"
        android:layout_marginTop="@dimen/range_16"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        android:layout_marginBottom="@dimen/range_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="@color/blue"
        app:strokeWidth="1dp"
        android:text="@string/text_cancel"
        style="@style/ButtonStyleBlack12"/>
</androidx.constraintlayout.widget.ConstraintLayout>